fixed the autocomplete css so it is more visible.

--- a/app/public/styles/new-styles.css
+++ b/app/public/styles/new-styles.css
@@ -48,4 +48,19 @@ body, html {
     height: 300px;
 }
 
- 
+.autocomplete-suggestions { 
+    border: 1px solid #999; 
+    border-top: none;
+    background: #FFF; 
+    overflow: auto; 
+    color: black;
+}
+.autocomplete-suggestion { 
+    padding: 2px 5px; 
+    white-space: nowrap; 
+    overflow: hidden; 
+}
+
+.autocomplete-selected { 
+    background: #F0F0F0; 
+}
